--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1",
+    "react-player": "^1.15.2",
+    "react-scripts": "^3.4.0",
     "styled-components": "^5.0.1",
     "styled-reset": "^4.1.0"
   },
@@ -36,7 +37,6 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.3",
-    "jest": "^25.1.0",
     "prettier": "1.19.1"
   }
 }
