--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.9.0",
     "react-player": "^1.15.2",
     "react-scripts": "^3.4.0",
     "styled-components": "^5.0.1",
@@ -35,8 +36,13 @@
     ]
   },
   "devDependencies": {
+    "@iconify/icons-cib": "^1.0.0",
+    "@iconify/icons-logos": "^1.0.9",
+    "@iconify/icons-mdi": "^1.0.70",
+    "@iconify/react": "^1.1.1",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.3",
-    "prettier": "1.19.1"
+    "prettier": "1.19.1",
+    "react-social-icons": "^4.1.0"
   }
 }
