Add google font to index.js

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "^3.4.0",
     "react-transition-group": "^4.3.0",
     "styled-components": "^5.0.1",
-    "styled-reset": "^4.1.0"
+    "styled-reset": "^4.1.0",
+    "typeface-bungee-shade": "0.0.71"
   },
   "scripts": {
     "start": "react-scripts start",
