--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "responsive-react": "^3.0.2",
     "styled-components": "^5.0.1",
     "styled-reset": "^4.1.0",
+    "typeface-acme": "0.0.72",
     "typeface-bungee-shade": "0.0.71"
   },
   "scripts": {
