Organize directories within src directory

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@iconify/react": "^1.1.2",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "prettier": "1.19.1",
     "react-social-icons": "^4.1.0"
   }
