Implement react-router-dom

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
     "react-player": "^1.15.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "react-transition-group": "^4.3.0",
     "responsive-react": "^3.0.2",
